<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>manymove_signals</name>
  <version>0.1.0</version>
  <description>Action servers for handling I/O and system commands for manymove_planner</description>
  <maintainer email="marco.pastorio@flexingroup.com">Marco Pastorio</maintainer>
  <license>BSD-3-Clause</license>
  <author email="pastoriomarco@gmail.com">Marco Pastorio</author>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <build_depend>rclcpp</build_depend>
  <build_depend>rclcpp_action</build_depend>
  <build_depend>action_msgs</build_depend>
  <build_depend>xarm_msgs</build_depend>
  <build_depend>manymove_planner</build_depend>
  <build_depend>rosidl_default_generators</build_depend>

  <exec_depend>rclcpp</exec_depend>
  <exec_depend>rclcpp_action</exec_depend>
  <exec_depend>action_msgs</exec_depend>
  <exec_depend>xarm_msgs</exec_depend>
  <exec_depend>manymove_planner</exec_depend>
  <exec_depend>rosidl_default_generators</exec_depend>

  <member_of_group>rosidl_interface_packages</member_of_group>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
